--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ endorsed.classpath=\
 excludes=
 file.reference.aopalliance-repackaged-2.4.0-b34.jar=libs/jersey/aopalliance-repackaged-2.4.0-b34.jar
 file.reference.asm-debug-all-5.0.4.jar=libs/jersey/asm-debug-all-5.0.4.jar
+file.reference.commons-codec-1.10.jar=libs/commons-codec-1.10.jar
 file.reference.gson-2.8.0.jar=libs/gson/gson-2.8.0.jar
 file.reference.hk2-api-2.4.0-b34.jar=libs/jersey/hk2-api-2.4.0-b34.jar
 file.reference.hk2-locator-2.4.0-b34.jar=libs/jersey/hk2-locator-2.4.0-b34.jar
@@ -86,7 +87,8 @@ javac.classpath=\
     ${file.reference.gson-2.8.0.jar}:\
     ${file.reference.JDBCTemplate.jar}:\
     ${file.reference.mysql-connector-java-8.0.16.jar}:\
-    ${file.reference.mongo-java-driver-3.12.2.jar}
+    ${file.reference.mongo-java-driver-3.12.2.jar}:\
+    ${file.reference.commons-codec-1.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
