--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,6 @@
-deploy.ant.properties.file=C:\\Users\\logic\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
+deploy.ant.properties.file=/home/marco/.netbeans/8.2/tomcat80.properties
 j2ee.server.domain=/home/marco/.netbeans/8.2/apache-tomcat-8.0.27.0_base
-j2ee.server.home=C:/Users/logic/Documents/Programas/apache-tomcat-9.0.33
-j2ee.server.instance=tomcat90:home=C:\\Users\\logic\\Documents\\Programas\\apache-tomcat-9.0.33
+j2ee.server.home=/usr/local/apache-tomcat-8.0.27
+j2ee.server.instance=tomcat80:home=/usr/local/apache-tomcat-8.0.27:base=apache-tomcat-8.0.27.0_base
 selected.browser=SL[/Browsers/FirefoxBrowser
-user.properties.file=C:\\Users\\logic\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/home/marco/.netbeans/8.2/build.properties
