Se agregaron estilos a todas las páginas

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,5 +2,5 @@ deploy.ant.properties.file=C:\\Users\\pollo\\AppData\\Roaming\\NetBeans\\8.2\\to
 j2ee.server.domain=/home/marco/.netbeans/8.2/apache-tomcat-8.0.27.0_base
 j2ee.server.home=C:/Users/pollo/Downloads/apache-tomcat-8.5.53-windows-x64/apache-tomcat-8.5.53
 j2ee.server.instance=tomcat80:home=C:\\Users\\pollo\\Downloads\\apache-tomcat-8.5.53-windows-x64\\apache-tomcat-8.5.53
-selected.browser=Chrome.INTEGRATED
+selected.browser=SL[/Browsers/FirefoxBrowser
 user.properties.file=C:\\Users\\pollo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
