--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,8 @@
-deploy.ant.properties.file=/home/marco/.netbeans/8.2/tomcat80.properties
-j2ee.server.domain=/home/marco/.netbeans/8.2/apache-tomcat-8.0.27.0_base
-j2ee.server.home=/usr/local/apache-tomcat-8.0.27
-j2ee.server.instance=tomcat80:home=/usr/local/apache-tomcat-8.0.27:base=apache-tomcat-8.0.27.0_base
+deploy.ant.properties.file=C:\\Users\\Esau\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-1970308285.properties
+j2ee.platform.is.jsr109=true
+j2ee.server.domain=C:/Users/Esau/personal_domain
+j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Users\\Esau\\personal_domain]deployer:gfv3ee6wc:localhost:18803
+j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 selected.browser=SL[/Browsers/FirefoxBrowser
-user.properties.file=/home/marco/.netbeans/8.2/build.properties
+user.properties.file=C:\\Users\\Esau\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
