--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\Esau\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-1970308285.properties
+deploy.ant.properties.file=C:\\Users\\Esau\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3792218177.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Esau/personal_domain
+j2ee.server.domain=C:/Users/Esau/personal_domain_1
 j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Users\\Esau\\personal_domain]deployer:gfv3ee6wc:localhost:18803
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Users\\Esau\\personal_domain_1]deployer:gfv3ee6wc:localhost:37259
 j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 selected.browser=SL[/Browsers/FirefoxBrowser
 user.properties.file=C:\\Users\\Esau\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
