--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,5 +6,5 @@ j2ee.server.instance=tomcat80:home=C:\\Users\\pollo\\Downloads\\apache-tomcat-8.
 j2ee.server.middleware=/usr/local/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=SL[/Browsers/FirefoxBrowser
+selected.browser=Chrome.INTEGRATED
 user.properties.file=C:\\Users\\pollo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
